[package]
name = "sql_split"
authors = ["James Vasile"]
description = "Split a string wtih multiple sql statements into separate strings"
repository = "https://github.com/jvasile/sql_split"
version = "0.1.0"
edition = "2021"
keywords = ["sqlite", "database", "split", "sql"]
license = "MIT"
categories = ["database"]
readme = "README.md"

[dev-dependencies]
rusqlite = "0.27.0"
