[package]
name = "sql_split"
authors = ["James Vasile"]
description = "Split a string wtih multiple sqlite sql statements into separate strings"
documentation = "https://github.com/jvasile/sql_split"
homepage = "https://github.com/jvasile/sql_split"
repository = "https://github.com/jvasile/sql_split"
version = "0.1.1"
edition = "2021"
keywords = ["sqlite", "database", "split", "sql"]
license = "MIT"
categories = ["database"]
readme = "README.md"

[dev-dependencies]
rusqlite = "0.27.0"
